--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,19 +1,42 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Log in!
+{% endblock %}
 
 {% block body %}
-<h1>Connexion</h1>
-    <form action="{{ path(security_login) }}" method="post">
-        <div class="form-group">
-            <input type="text" placeholder="Adresse mail" required name="_username" class="form-control">
-        </div>
+  <div class="login">
+    <div class="wrapper" style="min-height:100vh">
+      <section class="sidebar sidebar--login"></section>
+      <section class="main">
+        <main></main>
+      </section>
 
-        <div class="form-group">
-            <input type="text" placeholder="Mot de passe" required name="_password" class="form-control">
+      <div class="popup">
+        <div class="popup__content popup__content--login">
+          <h2 class="popup__headline">Connectes toi !!!!!</h2>
+          <p class="popup__text">
+            Conectez toi pour profiter des tout le functionalite du site.
+            <span class="popup__text popup__text--error"></span>
+          </p>
+          <form action="/blog" autocomplete="off" class="form form--login" method="post">
+            <div class="form__line">
+              <label for="username">Enter ton Username :
+              </label>
+              <input id="username" name="username" required type="text">
+            </div>
+            <div class="form__line">
+              <label for="password">Enter ton mot des password :
+              </label>
+              <input id="password" name="password" required type="password">
+            </div>
+            <div class="form__button">
+              <input type="submit" value="Send">
+            </div>
+          </form>
+          <a class="textLink" href="/inscription">Pas encore un compte?</a>
         </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-success">Connexion !</button>
-        </div>
-    </form>
+      </div>
+    </div>
+    <script src="js/script.js"></script>
+  </div>
 {% endblock %}
